# RP_2040

./: BOM_PPSE.xlsx  Componenti e datasheet.txt  README.md
FW/: Changelog.txt
FW/RTC/: CMakeLists.txt  main.c
FW/RTC/inc/: mcp7940.h
FW/RTC/src/: mcp7940.c
FW/STRUTTURA_BASE/: CMakeLists.txt  main.c
FW/TEST_RTC_GPS/: CMakeLists.txt  main.c  pico_sdk_import.cmake  ref
FW/TEST_RTC_GPS/TEST_RTC_GPS/: CMakeLists.txt  main.c
FW/TEST_RTC_GPS/TEST_RTC_GPS/inc/: file.h  mcp7940.h  pcf8563_h.h
FW/TEST_RTC_GPS/TEST_RTC_GPS/src/: mcp7940.c  pcf8563.c
FW/TEST_RTC_GPS/inc/: mcp7940.h  pam7q.h
FW/TEST_RTC_GPS/src/: mcp7940.c  pam7q.c  pcf8563.c
FW/merge_ethernet_rtc_gps/: CMakeLists.txt
FW/merge_ethernet_rtc_gps/examples/httpd/: CMakeLists.txt  main.c
FW/merge_ethernet_rtc_gps/examples/httpd/inc/: bmp180.h  mcp7940.h
FW/merge_ethernet_rtc_gps/examples/httpd/src/: bmp180.c  file.c  pam7q.c
FW/merge_ethernet_rtc_gps/lib/lwip/src/apps/http/: fsdata.c  (+1 more)
FW/merge_prova/: merge_rmii_rtc_gps.code-workspace
FW/merge_prova/examples/httpd/: CMakeLists.txt  main.c
FW/merge_prova/examples/httpd/inc/: samm8q.h
FW/merge_prova/examples/httpd/src/: README.MD  mcp7940.c  pcf8563.c  samm8q.c
FW/pico-rmii-ethernet/: Documentazione lwIP.txt
FW/pico-rmii-ethernet/examples/httpd/: main.c
PSE_RP2040/: #auto_saved_files#  PSE_RP2040-cache.lib  PSE_RP2040-rescue.lib  PSE_RP2040.csv  PSE_RP2040.kicad_pcb  PSE_RP2040.kicad_prl  PSE_RP2040.kicad_pro  PSE_RP2040.kicad_sch  PSE_RP2040.sch  PSE_RP2040.sch-bak  PSE_RP2040.xml  PSE_RP2040_netlist.net  _autosave-PSE_RP2040.kicad_pcb  _autosave-PSE_RP2040.kicad_sch  fp-info-cache  fp-lib-table  lan.kicad_sch  sym-lib-table  untitled.kicad_sch
PSE_RP2040/Gerber/: PSE_RP2040-B_Cu.gbl  PSE_RP2040-B_Cu.gbr  PSE_RP2040-B_Mask.gbr  PSE_RP2040-B_Mask.gbs  PSE_RP2040-B_Paste.gbr  PSE_RP2040-B_Silkscreen.gbo  PSE_RP2040-B_Silkscreen.gbr  PSE_RP2040-Edge_Cuts.gbr  PSE_RP2040-Edge_Cuts.gko  PSE_RP2040-F_Cu.gbr  PSE_RP2040-F_Cu.gtl  PSE_RP2040-F_Mask.gbr  PSE_RP2040-F_Mask.gts  PSE_RP2040-F_Paste.gbr  PSE_RP2040-F_Paste.gtp  PSE_RP2040-F_Silkscreen.gbr  PSE_RP2040-F_Silkscreen.gto  PSE_RP2040-drl_map.ps  PSE_RP2040-job.gbrjob  PSE_RP2040.drl
PSE_RP2040/Gerber/Drill/: PSE_RP2040-NPTH.drl  PSE_RP2040-PTH.drl  PSE_RP2040.drl
PSE_RP2040/Lamina/: PSE_RP2040-F_Paste_lamina.gtp.gbr
PSE_RP2040/PSE2021.pretty/: PAM-7Q.kicad_mod  RJ45_Amphenol_RJHSE-5081.kicad_mod  RP2040-QFN-56.kicad_mod  SAM-M8Q.kicad_mod  SPARK_GAP_TRIANGLE.kicad_mod
PSE_RP2040/PSE_RP2040/PSE_RP2040/: PSE_RP2040-cache.lib  PSE_RP2040.sch  sym-lib-table
PSE_RP2040/PSE_RP2040/Simboli e footprint componenti scaricati/LIB_ABLS-12.000MHZ-B4-T_crystal/ABLS-12.000MHZ-B4-T/KiCad/: ABLS-12.000MHZ-B4-T.mod  HC_49US-_AT49__1.kicad_mod
PSE_RP2040/PSE_RP2040/Simboli e footprint componenti scaricati/LIB_AT25SF128A-SHB-T_flash/AT25SF128A-SHB-T/: AT25SF128A-SHB-T.epw  part_info.txt
PSE_RP2040/PSE_RP2040/Simboli e footprint componenti scaricati/LIB_SAM-M8Q-0_GPS/SAM-M8Q-0/: part_info.txt
PSE_RP2040/bom/: ibom.html
RELAZIONE/: PPSE_LAN_NTP.docx
Simboli e footprint componenti scaricati/KiCAD/2022-03-28_08-51-36/: 2022-03-28_08-51-36.lib
Simboli e footprint componenti scaricati/KiCAD/2022-03-28_08-51-36/footprints.pretty/: SAM-M8Q.kicad_mod
Simboli e footprint componenti scaricati/LIB_ABLS-12.000MHZ-B4-T_crystal/ABLS-12.000MHZ-B4-T/: ABLS-12.000MHZ-B4-T.epw  part_info.txt
Simboli e footprint componenti scaricati/LIB_ABLS-12.000MHZ-B4-T_crystal/ABLS-12.000MHZ-B4-T/KiCad/: ABLS-12.000MHZ-B4-T.lib
Simboli e footprint componenti scaricati/LIB_AT25SF128A-SHB-T_flash/AT25SF128A-SHB-T/KiCad/: AT25SF128A-SHB-T.mod  SOIC127P790X216-8N.kicad_mod
Simboli e footprint componenti scaricati/LIB_SAM-M8Q-0_GPS/SAM-M8Q-0/: SAM-M8Q-0.epw
Simboli e footprint componenti scaricati/LIB_SAM-M8Q-0_GPS/SAM-M8Q-0/KiCad/: SAM-M8Q-0.dcm  SAM-M8Q-0.lib  SAM-M8Q-0.mod
Simboli e footprint componenti scaricati/PAM7Q/: gpsChip.lib
Simboli e footprint componenti scaricati/RP2040/2022-03-28_09-06-15/footprints.pretty/: RP2040.kicad_mod
Simboli e footprint componenti scaricati/W25Q16JVUXIQ/: Flash_memory.lib
Simboli e footprint componenti scaricati/buckConverter/: buck_converter.lib
Simboli e footprint componenti scaricati/elementi_ethernet/: ethernet_lib.bak  ethernet_lib.kicad_sym
Simboli e footprint componenti scaricati/ethernet/: SamacSys_Parts.dcm  ethernet.lib
Simboli e footprint componenti scaricati/ethernet/SamacSys_Parts.3dshapes/: 749013011.stp  RJHSE-5085.stp  RJHSE-5385.stp
Simboli e footprint componenti scaricati/ethernet/SamacSys_Parts.pretty/: 749013011.kicad_mod  NE555DR.kicad_mod  QFN50P400X400X100-25N-D.kicad_mod  RJHSE5085.kicad_mod  RJHSE5385.kicad_mod
Simboli e footprint componenti scaricati/ul_MBR120VLSFT1G_diodo/KiCAD/2022-03-23_14-45-30/: 2022-03-23_14-45-30.lib
(+8 files in other folders)
